[r=blake-rouse][bug=1681389,1681399,1681757][author=ricgard] Resolving issue for form alignment on add zone, subnet, vlan and commissioning on nodes.

--- a/src/maasserver/static/scss/_pages.scratch.scss
+++ b/src/maasserver/static/scss/_pages.scratch.scss
@@ -44,10 +44,6 @@
     height: initial !important;
   }
 
-  .form--inline {
-    display: inline-block;
-  }
-
   .nav {
 
     @media only screen and (max-width: 768px) {
